fix carousel component activeIndex jumping view motion looks confusion

--- a/src/components/carouselItem/carouselItem.less
+++ b/src/components/carouselItem/carouselItem.less
@@ -9,5 +9,8 @@
   transition: all 0.5s;
 }
 .sim-carousel-item-active {
+  z-index: 3;
+}
+.sim-carousel-item-neighbor {
   z-index: 2;
 }
